syntax = "proto3";

package proto;

option go_package = "pb";
option java_package = "com.example";
option java_multiple_files = true;

import "proto/house_message.proto";

message House {
  string id = 1;
  string brand = 2;
  string name = 3;
  oneof size {
      double size_sqfeet = 10;
      double stories = 11;
  }
  google.protobuf.Timestamp updated_at = 12;
}
message CreateHouseRequest {House house =1; }

message CreateHouseResponse { string id =1; }

service HouseService {

  rpc CreateHouse(CreateHouseRequest) returns (CreateHouseResponse) {};

}